# prospections_qrcode

./: .gitignore  pyproject.toml
incolumepy/qrcode/: datagen.py  main.py
tests/: test_incolumepy_qrcode.py
