[tool.poetry]
name = "incolumepy.qrcode"
version = "0.1.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^8.12.1"
Pillow = "^8.3.2"
qrcode = "^7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
