[tool.poetry]
name = "incolumepy.qrcode"
version = "0.1.2-alpha.2"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages=[
  {include = 'incolumepy/qrcode', from=''},
]

license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
keywords = ["qrcode"]
classifiers = [
  "License :: Free For Educational Use",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Education",
  "Topic :: Education :: Testing",
  "Topic :: Utilities"
]
include = [
  "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^8.12.1"
Pillow = "^8.3.2"
qrcode = {extras = ["pil"], version = "^7.3"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
